feat(recommendation) trien khai module recommendation service